<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context="com.projects.bakota.composantesgraphiques.FirstFragment">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/msg_first_form"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="bold" />



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textCapWords"
                android:hint="@string/nom" />

            <EditText android:id="@+id/input_pnom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textCapWords"
                android:hint="@string/pnom" />

            <EditText android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="#000"
                android:hint="@string/date_naiss"
                android:focusable="false"
                android:textColorHint="#000"
                android:inputType="date|datetime"
                />


            <Spinner
                android:layout_width="match_parent"
                android:id="@+id/input_langue"
                android:layout_marginTop="24dp"
                android:layout_height="wrap_content">
            </Spinner>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_suiv_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:textAllCaps="false"
               android:layout_gravity="right"
                android:text="@string/suiv_btn"/>
        </LinearLayout>


    </LinearLayout>
